--- a/CYaPass/Base.lproj/Main.storyboard
+++ b/CYaPass/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                 <color key="backgroundColor" red="0.94458484343384919" green="0.99117768925672212" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="7Sl-em-3HO">
-                                <rect key="frame" x="55" y="267" width="323" height="67"/>
+                                <rect key="frame" x="55" y="267" width="323" height="18030"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4xs-65-YDB">
                                         <rect key="frame" x="0.0" y="0.0" width="323" height="30"/>
@@ -37,27 +37,13 @@
                                             <action selector="ClearGridButtonClicked:" destination="9pv-A4-QxB" eventType="touchUpInside" id="knp-dm-oG0"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by MainViewController" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A5M-7J-77L">
-                                        <rect key="frame" x="0.0" y="30" width="323" height="17"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A5M-7J-77L">
+                                        <rect key="frame" x="0.0" y="30" width="323" height="18000"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="unlessEditing" translatesAutoresizingMaskIntoConstraints="NO" id="89r-nj-ClD">
-                                        <rect key="frame" x="0.0" y="47" width="323" height="20"/>
-                                        <color key="backgroundColor" red="0.77109899535705273" green="1" blue="0.6420241608866748" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="wg7-A0-y1b"/>
-                                        </constraints>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
-                                    </textField>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstItem="89r-nj-ClD" firstAttribute="leading" secondItem="7Sl-em-3HO" secondAttribute="leading" constant="3" id="U3k-IP-vrc"/>
-                                    <constraint firstAttribute="trailing" secondItem="89r-nj-ClD" secondAttribute="trailing" constant="3" id="g8t-Ec-zgS"/>
-                                </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qco-lS-7Rj">
                                 <rect key="frame" x="87" y="387" width="365" height="160"/>
@@ -133,7 +119,6 @@
                         <outlet property="ClearGridButton" destination="4xs-65-YDB" id="wNS-4h-ild"/>
                         <outlet property="HashLabelOutlet" destination="A5M-7J-77L" id="Rmp-58-vU0"/>
                         <outlet property="SiteKeyPicker" destination="Flh-F5-NCd" id="kBU-5x-ib1"/>
-                        <outlet property="SiteKeyTextField" destination="89r-nj-ClD" id="dYb-Bo-JBR"/>
                         <outlet property="TopGridView" destination="yrl-9S-DHQ" id="25z-re-gNQ"/>
                     </connections>
                 </viewController>
